# ZarrDB

./: .gitignore  LICENSE  README.md  api.py  apiv3.py  pyproject.toml  test_kerchunk.py  test_zarr.py
configs/zdb/: CMIP6.ScenarioMIP.NUIST.NESM3.ssp585.r1i1p1f1.3hr.uas.gn.v20190812.zdb1.0.json  ecmwf-era5_oper_an_sfc_19790101.10v.repack.zdb1.0.json
zarrdb/: api.py  constructor.py  gather.py
