[project]
name = "zarrdb"
version = "0.1.0"
description = "Kerchunk references stored in a MongoDB database, served as a Zarr API"
authors = [
    {name = "dwest77a",email = "daniel.westwood@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "yarl (>=1.22.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
